eks/dev/frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: johnny-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: johnny-frontend
  template:
    metadata:
      labels:
        app: johnny-frontend
    spec:
      containers:
        - name: johnny-frontend
          image: 359546647832.dkr.ecr.us-east-1.amazonaws.com/johnny-johnny/johnny-johnny-ui:latest
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: johnny-frontend
spec:
  type: ClusterIP
  selector:
    app: johnny-frontend
  ports:
    - port: 80
      targetPort: 3000
