eks/dev/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: johnny-ingress
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - host: johnny-johnny.mycroftai.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: johnny-frontend
                port:
                  number: 80

    - host: api.johnny-johnny.mycroftai.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: johnny-backend
                port:
                  number: 8080
